Import of BINGOS/Dist-Zilla-Plugin-FakeFaker-0.04 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-Plugin-FakeFaker
gitpan-cpan-version:      0.04
gitpan-cpan-path:         BINGOS/Dist-Zilla-Plugin-FakeFaker-0.04.tar.gz
gitpan-cpan-author:       BINGOS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -17,6 +17,6 @@ requires:
   Dist::Zilla::Plugin::MakeMaker: 4.101582
   perl: 5.008005
 resources:
-  homepage: http://github.com/bingos/dist-zilla-plugin-fakefaker/tree
-  repository: git://github.com/bingos/dist-zilla-plugin-fakefaker.git
-version: 0.02
+  homepage: http://github.com/bingos/dist-zilla-plugin-fakefaker
+  repository: http://github.com/bingos/dist-zilla-plugin-fakefaker
+version: 0.04
